NXT-2179: Code style code-review follow-ups
Names, scopes, unused methods, formatting, etc.

NXT-2179 (Workflows already loaded via 'Call Workflow (Service)' aren't taken into account)